updated hacked and index

--- a/Index.html
+++ b/Index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+<script src="hacked.js"></script>
 <body>
     <h1>Hello Osama, Ridwan says hi</h1>
 </body>
