--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 </head>
 <script src="hacked.js"></script>
 <body>
-    <h1>Hello Osama, Ridwan says hi</h1>
+    <h1>Hello Soto Bhaiya, Ridwan says hi</h1>
 </body>
 </html>
